# APE

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
APE/: Fire.py  Industrial.py  ModCheckDownloadVelocity.py  ModDataPrepare_SatelliteDataFiltering.py  ModDataPrepare_SatelliteIndentifyOrbits.py  ModDataPrepare_SatelliteRead.py  ModDataPrepare_VIIRSData.py  ModEE_ComputeEmissions.py  ModEE_CreateSources.py  ModEE_CrossSectionalFlux.py  ModEE_Divergence.py  ModEE_EmissionEstimate.py  ModEE_Flow.py  ModEE_Interpolation.py  ModEE_MassFlux.py  ModEE_ParticlesBasedCrosssectionalFlux.py  ModEE_RunSimFire.py  ModEE_RunSimInd.py  ModEE_SaveSimulation.py  ModEE_Setup.py  ModEE_Simulation.py  ModEE_Trajectory2Concentration.py  ModEE_TransactionalLines.py  ModEE_VelocityInterpolation2d.py  ModEE_VerticalData.py  ModPlume_Detection.py  ModPlume_Filtering.py  ModuleChecks.py  ModuleDataContainers.py  ModuleInitialParameters.py  ModuleInjectionHeight.py  ModuleRead.py  ModuleRefineGrids.py  ModuleRunFire.py  ModuleRunIndustrial.py  ModuleRunIndustrial1.py  ModuleRunIndustrial_old.py  ModuleTransform.py  ModuleWrite.py
docs/: FlagsCode.md
examples/: example.yaml  examplefire.py  fire_example.yaml  industrial_cfm.py  industrial_divergence.py  industrial_plumedetection.py  main.py  steelplant_cfm.yaml  steelplant_divergence.yaml  steelplant_example.yaml  steelplant_plumedetection.yaml
src/: ModDataPrepare_SatelliteIndentifyOrbits.py  ModDataPrepare_SatelliteRead.py  ModEE_Flow.py  ModEE_MassFlux.py  ModEE_RunSim.py  ModEE_VelocityInterpolation2d.py  ModuleWrite.py  (+6 more)
(+24 files in other folders)
