[build-system]
requires = ["setuptools", "cython"]

[project]
name = "APE"
version = "2.0"
requires-python = ">= 3.11"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
cache-dir = "~/.cache/ruff"
line-length = 120
indent-width = 4
extend-exclude = ["tests", "examples"]


[tool.ruff.lint]
# Add "Q" to the list of enabled codes.
select = ["E4", "E7", "E9", "F", "Q"]
# ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

# [tool.ruff.flake8-quotes]
# docstring-quotes = "single"

[tool.ruff.format]
# Format all docstring code snippets with a line length of 60.
docstring-code-line-length = 80
# magic trailing commas.
skip-magic-trailing-comma = true
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# [tool.ruff.pydocstyle]
# convention = "numpy"  # "google" | "numpy" | "pep257"
